turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:24: error: not found: value LENGTH
		val l=rule;LENGTH
                           ^LangtonsAnt:25: error: value - is not a member of Array[Char]
		if (k != l-1) {setCouleurSol(colors(k+1))}
                          ^